Seems Good added all functionality, check mobile as well as desktop. need to check if scrollbar issue can be resolved

--- a/coming-soon/app/global.css
+++ b/coming-soon/app/global.css
@@ -1,11 +1,18 @@
 /* app/globals.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap'); /* Added 900 for bolder options */
 
+html {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 body {
   margin: 0;
   font-family: 'Poppins', sans-serif;
   background-color: #f0f2f5;
   color: #333;
+    padding: 0;
+  overflow-x: hidden;
 }
 
 a {
